<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/view_plane_list" />

    	<Button
	        android:id="@+id/showPlaneList"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="15dp"
	        android:background="@android:color/darker_gray"
	        android:text="@string/click_to_show_list"
	        android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sort_by_type" />

    	<Button
	        android:id="@+id/showPlaneListByType"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="15dp"
	        android:background="@android:color/darker_gray"
	        android:text="@string/click_to_show_list_by_type"
	        android:textColor="@android:color/white" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sort_alphabetically" />

    	<Button
	        android:id="@+id/showPlaneListByAlpha"
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:layout_marginBottom="10dp"
	        android:layout_marginTop="15dp"
	        android:background="@android:color/darker_gray"
	        android:text="@string/click_to_show_alphabetically"
	        android:textColor="@android:color/white" />
    </LinearLayout>
    

</LinearLayout>
