<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewLogEntry" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/plane_name"/>
	    <EditText 
	        android:id="@+id/nameField"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content"/>
	    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/plane_type_"/>
	    <EditText 
	        android:id="@+id/typeField"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content"/>
	    
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/power_system"/>
	    <EditText 
	        android:id="@+id/powerTypeField"
	        android:layout_width="match_parent"
	        android:inputType="text"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:text="@string/flight_time"/>
	    <EditText 
	        android:id="@+id/flightTimeField"
	        android:layout_width="match_parent"
	        android:inputType="number"
	        android:layout_height="wrap_content"/>
    </LinearLayout>
    
    <Button 
		    android:id="@+id/editPlaneButton"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="100dp"
		    android:background="@android:color/darker_gray"
		    android:text="@string/save_plane"
		    android:textColor="@android:color/white"/>
    <Button 
		    android:id="@+id/cancelButton"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="10dp"
		    android:layout_width="match_parent"
		    android:layout_height="100dp"
		    android:background="@android:color/darker_gray"
		    android:text="@string/cancel"
		    android:textColor="@android:color/white"/>

</LinearLayout>
